# models/auth.go
@@ -1,0 +1,6 @@
+package models
+
+type Auth struct {
+    Email    string `json:"email"`
+    Password string `json:"password"`
+}
